traefik3/5_ingressroutetcp_kafka/kafka-svc-inner.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  labels:
    app: kafka
spec:
  ports:
  - name: kafka 
    port: 9092
  clusterIP: None 
  selector: 
    app: kafka
