traefik3/5_ingressroutetcp_kafka/traefik-kafka-service.yml
# 代理3306端口的service
apiVersion: v1
kind: Service
metadata:
  name: traefik-kafka-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: kafka
      port: 9092
      nodePort: 30092 # 指定一个端口
  selector:
    app: traefik
