traefik3/5_ingressroutetcp_kafka/ingressroutetcp-kafka.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-0
  name: kafka-0-svc
spec:
  ports:
  - port: 30092
    protocol: TCP
    targetPort: 30092
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-0

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-ingressroutetcp
spec:
  entryPoints:
  - kafka
  routes:
  - match: HostSNI(`*`)
    services:
      - name: kafka-0-svc
        port: 30092
